asm_tests/other_testfiles/invalid_files/error36.s
.name "MORO"
.comment "MORJESTA!"

kissa:
	live %12
	sti r1, r2, %:kissa
	sti r1, r2, %:koira
